--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             <div class="home-header">
                 <img src="logo.svg" height="100%" class="home-logo">
                 <div class="home-text">
-                    <div class="home-title">Flashpoint Database</div>
-                    <div class="home-subtitle">Search <b class="home-games"></b> games and <b class="home-animations"></b> animations</div>
+                    <div class="home-title animated-text">Flashpoint Database</div>
+                    <div class="home-subtitle animated-text">Search <b class="home-games"></b> games and <b class="home-animations"></b> animations</div>
                 </div>
             </div>
             <div class="home-search">
