changed home with new url

--- a/search/index.html
+++ b/search/index.html
@@ -15,7 +15,7 @@
             <a href="../search">Search</a>
             <a href="../statistics">Statistics</a>
             <a href="https://github.com/FlashpointProject/flashpoint-database" class="navbar-right">Source Code</a>
-            <a href="https://bluemaxima.org/flashpoint">Back to Home</a>
+            <a href="https://flashpointarchive.org">Back to Home</a>
         </div>
         <div class="content">
             <div class="search">
